--- a/android/PromGameMobile/res/layout/signup_step2_fragment.xml
+++ b/android/PromGameMobile/res/layout/signup_step2_fragment.xml
@@ -2,98 +2,138 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" 
-    android:padding="@dimen/gap" 
-    android:background="@color/light_gray">
+    android:background="@color/light_gray"
+    android:orientation="vertical"
+    android:padding="@dimen/gap" >
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/signup_step_2_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginTop="10dp" >
-
-       <TextView
-           android:id="@+id/step2_text"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_gravity="center"
-           android:layout_marginBottom="10dp"
-           android:text="@string/step2"
-           android:textAllCaps="true"
-           android:textColor="@color/white"
-           android:textSize="26sp"
-           android:textStyle="bold"
-           style="@style/SignupStep" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/birthday"
-            android:textAllCaps="true"
-            style="@style/BlueSectionHeader" />
-
-        <EditText
-            android:id="@+id/birthday_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="date"
-            android:layout_marginBottom="@dimen/gap2" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/address"
-            android:textAllCaps="true"
-            style="@style/BlueSectionHeader" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-            <EditText
-                android:id="@+id/pc4_edit"
+            <TextView
+                android:id="@+id/step2_text"
+                style="@style/SignupStep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="4"
-                android:inputType="number" />
+                android:layout_gravity="center"
+                android:text="@string/step2"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="26sp"
+                android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/pc3_edit"
+            <TextView
+                style="@style/BlueSectionHeader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="3"
-                android:inputType="number" />
+                android:layout_marginBottom="10dp"
+                android:text="@string/address"
+                android:textAllCaps="true" />
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-light"
+                android:text="Postal Code"
+                android:textColor="@color/dark_gray"
+                android:textStyle="italic" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <EditText
+                    android:id="@+id/pc4_edit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="4"
+                    android:inputType="number" />
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="-" />
+
+                <EditText
+                    android:id="@+id/pc3_edit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="3"
+                    android:inputType="number" />
+
+                <ImageButton
+                    android:id="@+id/imageButton1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/abs__ic_search_api_holo_light"
+                    android:onClick="handlePostalCode" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:fontFamily="sans-serif-light"
+                android:text="Address (Street)"
+                android:textColor="@color/dark_gray"
+                android:textStyle="italic" />
+
+            <TextView
+                android:id="@+id/location_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:text="-" />
+
+            <TextView
+                android:id="@+id/TextView02"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="sans-serif-light"
+                android:text="Address 2 (House/Building number)"
+                android:textColor="@color/dark_gray"
+                android:textStyle="italic" />
 
             <EditText
                 android:id="@+id/house_number_edit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:ems="4"
-                android:inputType="number" />
-
+                android:ems="8"
+                android:inputType="text" >
+            </EditText>
         </LinearLayout>
-
-    </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical"  >
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal" >
 
-        <Button
-            android:id="@+id/signup_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/sign_up"
-            android:textAllCaps="true"
-            android:onClick="handleSignupNavigation"
-            style="@style/WhiteButtonAppTheme" />
+        <View
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/inactive_fragment_dot" />
 
+        <View
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/active_fragment_dot" />
     </LinearLayout>
 
 </RelativeLayout>
