--- a/android/PromGameMobile/res/values/app_themes.xml
+++ b/android/PromGameMobile/res/values/app_themes.xml
@@ -15,6 +15,8 @@
         <item name="android:buttonStyle">@style/ButtonAppTheme</item>
 
         <item name="android:imageButtonStyle">@style/ImageButtonAppTheme</item>
+        
+        <item name="android:progressBarStyleHorizontal">@style/ProgressBarAppTheme</item>
 
     </style>
     
