--- a/android/PromGameMobile/res/layout/promotions_activity.xml
+++ b/android/PromGameMobile/res/layout/promotions_activity.xml
@@ -12,7 +12,6 @@
         staggered:numColumns="2"
         staggered:drawSelectorOnTop="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-         />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
