--- a/android/PromGameMobile/res/values-v11/app_themes.xml
+++ b/android/PromGameMobile/res/values-v11/app_themes.xml
@@ -4,5 +4,6 @@
         <item name="android:editTextBackground">@drawable/edit_text_holo_light</item>
         <item name="android:buttonStyle">@style/ButtonAppTheme</item>
         <item name="android:imageButtonStyle">@style/ImageButtonAppTheme</item>
+        <item name="android:progressBarStyleHorizontal">@style/ProgressBarAppTheme</item>
     </style>
 </resources>
