--- a/android/PromGameMobile/res/values/app_styles.xml
+++ b/android/PromGameMobile/res/values/app_styles.xml
@@ -38,5 +38,12 @@
         <item name="android:background">@drawable/edit_text_holo_light</item>
         <item name="android:textColor">#000000</item>
     </style>
+    
+    <style name="ProgressBarAppTheme" parent="android:Widget.ProgressBar.Horizontal">
+        <item name="android:progressDrawable">@drawable/progress_horizontal_holo_light</item>
+        <item name="android:indeterminateDrawable">@drawable/progress_indeterminate_horizontal_holo_light</item>
+        <item name="android:minHeight">16dip</item>
+        <item name="android:maxHeight">16dip</item>
+    </style>
 
 </resources>
