--- a/android/PromGameMobile/res/values/styles.xml
+++ b/android/PromGameMobile/res/values/styles.xml
@@ -20,4 +20,8 @@
         <item name="android:drawableBottom">@drawable/blue_section_header</item>
         <item name="android:textColor">@color/blue</item>
     </style>
+    
+    <style name="ProfileSubSection">
+        <item name="android:background">@drawable/rounded_rectangle</item>
+    </style>
 </resources>
