--- a/android/PromGameMobile/res/layout/edit_profile_activity.xml
+++ b/android/PromGameMobile/res/layout/edit_profile_activity.xml
@@ -8,8 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="30dp" >
+        android:layout_marginTop="10dp"
+        android:orientation="vertical" >
 
         <TextView
             android:layout_width="wrap_content"
@@ -18,16 +18,16 @@
             android:text="@string/name"
             android:textAllCaps="true"
             android:textColor="@color/gray"
-            android:textStyle="bold"
-            android:textSize="16sp"  />
-                
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
         <EditText
             android:id="@+id/name_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/gap"
             android:ems="10"
-            android:inputType="textPersonName" 
-            android:layout_marginBottom="@dimen/gap"/>
+            android:inputType="textPersonName" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -36,16 +36,16 @@
             android:text="@string/email"
             android:textAllCaps="true"
             android:textColor="@color/gray"
-            android:textStyle="bold"
-            android:textSize="16sp"  />
-        
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
         <EditText
             android:id="@+id/email_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/gap"
             android:ems="10"
-            android:inputType="textEmailAddress"
-            android:layout_marginBottom="@dimen/gap" />
+            android:inputType="textEmailAddress" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -54,16 +54,34 @@
             android:text="@string/password"
             android:textAllCaps="true"
             android:textColor="@color/gray"
-            android:textStyle="bold"
-            android:textSize="16sp"  />
-        
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
         <EditText
             android:id="@+id/pass_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/gap"
             android:ems="10"
-            android:inputType="textPassword"
-            android:layout_marginBottom="@dimen/gap" />
+            android:inputType="textPassword" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/gap"
+            android:text="@string/password_old"
+            android:textAllCaps="true"
+            android:textColor="@color/gray"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/pass_old_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/gap"
+            android:ems="10"
+            android:inputType="textPassword" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -72,65 +90,77 @@
             android:text="@string/birthday"
             android:textAllCaps="true"
             android:textColor="@color/gray"
-            android:textStyle="bold"
-            android:textSize="16sp"  />
-        
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
         <EditText
             android:id="@+id/birth_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/gap"
             android:ems="10"
-            android:inputType="date"
-            android:layout_marginBottom="@dimen/gap" />
+            android:inputType="date" />
 
-		<TextView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/gap"
             android:text="@string/address"
             android:textAllCaps="true"
             android:textColor="@color/gray"
-            android:textStyle="bold"
-            android:textSize="16sp"  />
-		
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
             <EditText
-                android:id="@+id/cod1_edit_text"
+                android:id="@+id/pc4_edit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:ems="4"
                 android:inputType="number" />
 
-            <EditText
-                android:id="@+id/cod2_edit_text"
+            <TextView
+                android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:text="-" />
+
+            <EditText
+                android:id="@+id/pc3_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:ems="3"
                 android:inputType="number" />
 
-            <EditText
-                android:id="@+id/port_edit_text"
+            <ImageButton
+                android:id="@+id/imageButton1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="4"
-                android:inputType="number" />
-
-            <EditText
-                android:id="@+id/andar_edit_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="5"
-                android:inputType="text" />
-
+                android:onClick="handlePostalCode"
+                android:src="@drawable/abs__ic_search_api_holo_light" />
         </LinearLayout>
-        
+
+        <TextView
+            android:id="@+id/TextView02"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="sans-serif-light"
+            android:text="Address 2 (House/Building number)"
+            android:textColor="@color/dark_gray"
+            android:textStyle="italic" />
+
+        <EditText
+            android:id="@+id/house_number_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="8"
+            android:inputType="text" >
+        </EditText>
     </LinearLayout>
 
     <LinearLayout
@@ -147,7 +177,8 @@
             android:text="@string/submit"
             android:textAllCaps="true"
             android:textColor="@color/white"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:onClick="handleSubmitEditProfile"/>
     </LinearLayout>
 
 </RelativeLayout>
