--- a/android/WinIt/res/layout/profile_activity.xml
+++ b/android/WinIt/res/layout/profile_activity.xml
@@ -44,7 +44,8 @@
                     android:text="Jonh Doe"
                     android:textColor="@color/dark_gray"
                     android:textSize="26sp"
-                    android:textStyle="bold" />
+                    android:fontFamily="sans-serif-light"
+                    android:textStyle="normal" />
 
                 <View
                     android:id="@+id/separator"
