--- a/android/WinIt/res/drawable/gradient_bg.xml
+++ b/android/WinIt/res/drawable/gradient_bg.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-  <gradient
-      android:startColor="#D5DDE0"
-      android:centerColor="#e7e7e8"
-      android:endColor="#CFCFCF"
-      android:angle="270" />
+    android:shape="rectangle" >
+    <solid
+        android:color="@color/light_gray"></solid>
+  	<corners
+        android:radius="6dp"/>
+    <stroke
+        android:width="3dp"
+        android:color="@color/light_gray" />
+   
 </shape>
