--- a/android/WinIt/res/layout/trading_promotions_to_trade.xml
+++ b/android/WinIt/res/layout/trading_promotions_to_trade.xml
@@ -7,8 +7,7 @@
       android:id="@+id/list"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
-      android:divider="#b5b5b5"
-      android:dividerHeight="1dp"
-      android:listSelector="@drawable/list_selector">
+      android:listSelector="@drawable/list_selector"
+      android:divider="@drawable/divider" android:dividerHeight="2dp" >
     </ListView>
 </LinearLayout>
