--- a/android/WinIt/res/layout/trading_sending_popup.xml
+++ b/android/WinIt/res/layout/trading_sending_popup.xml
@@ -2,40 +2,69 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/light_gray" >
+    android:background="@color/light_gray"
+    android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/select_promotion_text"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:text="@string/selected_promotion_to_send"
-        android:textSize="15sp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="15dp" />
-
-    <ImageView
-        android:id="@+id/promotion_popup_sending_image"
+    <LinearLayout
+        android:id="@+id/layout_popup1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerInParent="true"
-        android:contentDescription="@string/app_name"
-        android:layout_margin="15dp" />
+        android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/send_proposal"
-        style="@style/WhiteButtonAppTheme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="15dp"
-        android:layout_marginBottom="102dp"
-        android:onClick="sendTradeProposal"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:text="Send Proposal" />
+        <TextView
+            android:id="@+id/select_promotion_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:fontFamily="sans-serif"
+            android:text="@string/selected_promotion_to_send"
+            android:textAllCaps="true"
+            android:textColor="@color/dark_gray"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+        <View
+            android:id="@+id/separator_list_row"
+            android:layout_width="fill_parent"
+            android:layout_height="3dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginTop="1dp"
+            android:background="@color/dark_gray" />
+
+        <LinearLayout
+            android:id="@+id/layout_popup2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/promotion_popup_sending_image"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/app_name"
+                android:scaleType="centerCrop"
+                android:layout_marginTop="5dp" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/send_proposal"
+            style="@style/WhiteButtonAppTheme"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_margin="30dp"
+            android:layout_marginBottom="50dp"
+            android:background="@color/green"
+            android:fontFamily="sans-serif"
+            android:onClick="sendTradeProposal"
+            android:text="@string/send_proposal"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
 </RelativeLayout>
